k8s-legacy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-photo-ingress
  namespace: websites
  labels:
    app: website-photo
spec:
  ingressClassName: haproxy
  rules:
  - host: photo.level5.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-photo
            port:
              number: 80
